--- a/server/.gitignore
+++ b/server/.gitignore
@@ -22,5 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-src/video/SNBB.mp4
-build/static/media/SNBB.14f1c96ee0bc18d564ee.mp4
+build\static\media\SNBB.14f1c96ee0bc18d564ee.mp4
